# MuseScore

./: .gitignore  .gitignore.orig  CMakeLists.txt  LICENSE.GPL  LICENSE.rtf  Makefile  Makefile.mingw  README.md  SetupBuildEnvironment.bat
awl/: colorlabel.cpp
fluid/: fluidgui.cpp
libmscore/: chord.h  chordrest.cpp  chordrest.h  edit.cpp  figuredbass.cpp  note.cpp  property.cpp  score.cpp  scorefile.cpp  select.cpp  staff.cpp  tempo.h  text.cpp  text.h  utils.cpp
mscore/: CMakeLists.txt  CMakeLists.txt.orig  aboutbox.ui  aboutbox.ui.orig  album.cpp  albummanager.cpp  albummanager.cpp.orig  capella.cpp  dragelement.cpp  drumroll.cpp  drumroll.cpp.orig  editdrumset.cpp  editpitch.h  exportmp3.cpp  exportxml.cpp  file.cpp  file.cpp.orig  guitartools.cpp  guitartools.h  icons.cpp  icons.h  importgtp-gp6.cpp  instrdialog.cpp  instrdialog.cpp.orig  keyedit.cpp  layer.cpp  measureproperties.cpp  mediadialog.cpp  metaedit.cpp  mixer.cpp  mscorePlugins.cpp  musescore.cpp  musescore.cpp.orig  musescore.h  musescore.qrc  musescore.qrc.orig  newwizard.cpp  palette.cpp  pianoroll.cpp  pianoroll.cpp.orig  (+21 more)
mscore/data/: mscore.icns
mscore/debugger/: debugger.cpp
mscore/fretboard/: fingerboard.cpp  fingerboard.h  fretboard.cpp  fretboard.h  fretboardmodel.cpp  fretboardmodel.h  xfret.cpp  xfret.h  xfretboard.cpp  xfretboard.h  xfretboardview.cpp  xfretboardview.h  xhighlight.cpp  xhighlight.h  xstring.cpp  xstring.h  xstringitem.cpp  xstringitem.h  xvibrator.cpp  xvibrator.h
mscore/registration/: enterregistrationcode.cpp  enterregistrationcode.h  enterregistrationcode.ui  registrationchecker.cpp  trialdialog.h  (+5 more)
share/templates/: CMakeLists.txt
vtest/: gen
zerberus/: zerberusgui.cpp
(+5 files in other folders)
